<resources>
    <string name="app_name">SchoolBus</string>
    <string name="nav_trip">Viajes</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Shared preferences -->
    <string name="shared_preferences_file">LoginPrefs</string>

    <!-- Strings related to login -->
    <string name="last_name">Apellido</string>
    <string name="first_name">Nombre</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="phone">Telefono</string>
    <string name="action_sign_in">Entrar</string>
    <string name="error_invalid_email">Este email no es valido</string>
    <string name="error_invalid_password">Contraseña muy corta</string>
    <string name="error_incorrect_password">Contraseña Incorrecta</string>
    <string name="error_field_required">Campo Requerido</string>
    <string name="register">Regristrarse</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- Strings related to trips -->
    <string name="viaje">Viaje</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number">Number</string>
    <string name="telefono_2">Telefono 2</string>
    <string name="telefono_1">Telefono 1</string>
    <string name="rut">Rut</string>
    <string name="edad">Edad</string>
    <string name="classroom">Classroom</string>
    <string name="crear">Crear</string>
    <string name="add_user">Añadir Usuario</string>
    <string name="add_driver">Añadir Conductor</string>
    <string name="add_stop">Añadir parada</string>

    <!-- User Types strings -->
    <string name="user_type_admin">admin</string>
    <string name="user_type_driver">driver</string>
    <string name="user_type_guardian">guardian</string>
    <string name="add_alumno">AÑADIR ALUMNO</string>
    <string name="stree_number">Numero</string>
    <string name="street_name">Calle</string>
    <string name="region_name">Comuna</string>
    <string name="create_stop_button_text">Añadir</string>
    <string name="appartment_details">Departamento (dejar vacio si es casa)</string>
    <string name="add_trip">Añadir Viaje</string>
    <string name="add_bus">Añadir Bus</string>
    <string name="create_bus_button_text">Añadir</string>
    <string name="plate_edit_text">Patente del Vehiculo</string>
    <string name="driverLabel">Conductor</string>
    <string name="busLabel">Bus</string>
    <string name="create_trip_button_text">Crear Nuevo Viaje</string>
    <string name="dateLabel">Fecha</string>
    <string name="id">ID</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="roll">Roll</string>
    <string name="editar">Editar</string>
    <string name="borrar">Borrar</string>
    <string name="street">Calle:</string>
    <string name="comuna">Comuna:</string>
    <string name="numeration">Numeracion:</string>
    <string name="department">Departamento:</string>


    <!-- Student related strings -->
    <string name="student_name">Nombre</string>
    <string name="student_last_name">Apellido</string>
    <string name="student_guardian">Apoderado</string>
    <string name="student_address">Direccion</string>
    <string name="student_age">Edad</string>
    <string name="student_classroom">Curso</string>
    <string name="student_rut">RUT</string>
    <string name="student_contact_phone">Telefono de contacto</string>
    <string name="conductor">Conductor</string>
    <string name="fecha">Fecha</string>
    <string name="patente_del_bus">Patente del Bus</string>
    <string name="textview">TextView</string>
    <string name="guardian">Apoderado</string>
    <string name="stops">Parada</string>
    <string name="salas">Sala</string>

</resources>
