<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.TripCreateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/trip_id_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id" />

        <TextView
            android:id="@+id/trip_id_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/driver_trip_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conductor" />

        <Spinner
            android:id="@+id/driver_list_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/bus_plate_trip_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/patente_del_bus" />

        <Spinner
            android:id="@+id/bus_list_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/date_trip_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha" />

        <CalendarView
            android:id="@+id/date_trip_edit"
            android:layout_width="match_parent"
            android:layout_height="296dp"

            android:ems="10" />

        <Button
            android:id="@+id/add_students_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Agregar Alumnos" />

        <Button
            android:id="@+id/Edit_trip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editar" />

        <Button
            android:id="@+id/Delete_trip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/borrar" />
    </LinearLayout>
</FrameLayout>