<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.CreateStudentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/student_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/student_name"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/student_last_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/student_last_name"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/student_age_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/student_age"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/student_classroom_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/student_classroom"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/student_rut_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/student_rut"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/student_contact_phone_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/student_contact_phone"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/student_guardian"/>
            <Spinner
                android:id="@+id/guardian_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/user_type_array" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/student_address"/>
            <Spinner
                android:id="@+id/stop_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/create_student_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_stop_button_text" />
    </LinearLayout>

</FrameLayout>