<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.StopCreateFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/region_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/region_name"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/street_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/street_name"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/numeration_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/stree_number"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/apartement_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/appartment_details"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/create_stop_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_stop_button_text" />
    </LinearLayout>

    <!-- TODO: Update blank fragment layout -->

</FrameLayout>